# shiki

./: .gitignore  .oxfmtrc.jsonc  .swcrc  Cargo.toml  README.md  biome.json  devenv.nix  index.html  lefthook.yml  local.properties  mise.toml  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/workflows/: android.yml
.maestro/: android-smoke.yml  config.yaml
plugins/tauri-plugin-media/: Cargo.toml  README.md  build.rs  package.json  pnpm-lock.yaml
plugins/tauri-plugin-media/android/: build.gradle.kts
plugins/tauri-plugin-media/android/src/androidTest/java/: ExampleInstrumentedTest.kt
plugins/tauri-plugin-media/android/src/main/: AndroidManifest.xml
plugins/tauri-plugin-media/android/src/main/java/: MediaPlugin.kt
plugins/tauri-plugin-media/android/src/test/java/: ExampleUnitTest.kt
plugins/tauri-plugin-media/examples/tauri-app/: package.json
plugins/tauri-plugin-media/examples/tauri-app/src/: App.svelte
plugins/tauri-plugin-media/examples/tauri-app/src-tauri/: Cargo.toml
plugins/tauri-plugin-media/examples/tauri-app/src-tauri/capabilities/: default.json
plugins/tauri-plugin-media/examples/tauri-app/src-tauri/src/: lib.rs
plugins/tauri-plugin-media/guest-js/: index.ts
plugins/tauri-plugin-media/ios/: Package.swift  README.md
plugins/tauri-plugin-media/ios/Sources/: MediaPlugin.swift
plugins/tauri-plugin-media/permissions/: default.toml
plugins/tauri-plugin-media/permissions/autogenerated/: reference.md
plugins/tauri-plugin-media/permissions/autogenerated/commands/: check_media_permissions.toml  get_all_media.toml  get_media_items.toml  pick_folder.toml  pick_media.toml  request_media_permissions.toml
plugins/tauri-plugin-media/permissions/schemas/: schema.json
plugins/tauri-plugin-media/src/: commands.rs  desktop.rs  error.rs  lib.rs  linux.rs  macos.rs  mobile.rs  models.rs  scheme.rs  windows.rs
plugins/tauri-plugin-wallpaper/: Cargo.toml  README.md  build.rs  package.json
plugins/tauri-plugin-wallpaper/android/: build.gradle.kts  settings.gradle
plugins/tauri-plugin-wallpaper/android/src/androidTest/java/: ExampleInstrumentedTest.kt
plugins/tauri-plugin-wallpaper/android/src/main/: AndroidManifest.xml
plugins/tauri-plugin-wallpaper/android/src/main/java/: WallpaperPlugin.kt
plugins/tauri-plugin-wallpaper/android/src/test/java/: ExampleUnitTest.kt
plugins/tauri-plugin-wallpaper/examples/tauri-app/: package.json
plugins/tauri-plugin-wallpaper/examples/tauri-app/src/: App.svelte
plugins/tauri-plugin-wallpaper/examples/tauri-app/src-tauri/: Cargo.toml
plugins/tauri-plugin-wallpaper/examples/tauri-app/src-tauri/capabilities/: default.json
plugins/tauri-plugin-wallpaper/examples/tauri-app/src-tauri/src/: lib.rs
plugins/tauri-plugin-wallpaper/guest-js/: index.ts
plugins/tauri-plugin-wallpaper/permissions/: default.toml
plugins/tauri-plugin-wallpaper/permissions/autogenerated/: reference.md
plugins/tauri-plugin-wallpaper/permissions/autogenerated/commands/: get_wallpaper_info.toml  set_wallpaper.toml
plugins/tauri-plugin-wallpaper/permissions/schemas/: schema.json
plugins/tauri-plugin-wallpaper/src/: commands.rs  desktop.rs  error.rs  lib.rs  mobile.rs  models.rs
src/: App.tsx  app.d.ts  globals.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: HoneycombGallery.tsx
tmp/: ideas.md
(+11 files in other folders)
