[package]
name = "tauri-plugin-media"
version = "0.1.0"
authors = [ "You" ]
description = ""
edition = "2021"
rust-version = "1.77.2"
exclude = ["/examples", "/dist-js", "/guest-js", "/node_modules"]
links = "tauri-plugin-media"

[dependencies]
tauri = "2.0.0"
serde = "1.0"
thiserror = "2"
serde_json = "1.0"
serde_derive = "1.0" 

[build-dependencies]
tauri-plugin = { version = "2.0.0", features = ["build"] }
