[package]
name = "tauri-plugin-media"
version = "0.1.0"
authors = [ "You" ]
description = ""
edition = "2021"
rust-version = "1.77.2"
exclude = ["/examples", "/dist-js", "/guest-js", "/node_modules"]
links = "tauri-plugin-media"

[dependencies]
tauri = "2"
serde = "1"
thiserror = "2"
serde_json = "1"
serde_derive = "1"
infer = "0.19.0" 
log = "0.4"

[target.'cfg(linux)'.dependencies]
xdg = "3"

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21"


[build-dependencies]
tauri-plugin = { version = "2", features = ["build"] }
