[package]
name = "tauri-plugin-wallpaper"
version = "0.1.0"
authors = ["You"]
description = ""
edition = "2021"
rust-version = "1.77.2"
exclude = ["/examples", "/dist-js", "/guest-js", "/node_modules"]
links = "tauri-plugin-wallpaper"

[dependencies]
# Required for all plugins
tauri = { version = "2.11.2", features = [] }
serde = "1.0"
thiserror = "2"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62.2", features = [
  "Win32_UI_WindowsAndMessaging",
  "Win32_System_LibraryLoader",
  "Win32_Graphics_Gdi",
  "Win32_Foundation",
] }

[build-dependencies]
tauri-plugin = { version = "2.6.2", features = ["build"] }

[features]
default = ["mobile_support"]
windows_support = []
linux_support = []
mobile_support = []
